fix: remove non-composited transitions and content-visibility clipping

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -63,7 +63,6 @@ a {
   font-weight: 500;
   text-decoration: underline;
   text-decoration-color: var(--underline);
-  transition: text-decoration-color var(--transition-default);
 
   @include utils.hover {
     text-decoration-color: var(--underline-hover);
