--- a/src/styles/components/_tooltip.scss
+++ b/src/styles/components/_tooltip.scss
@@ -10,7 +10,6 @@
     font-weight: 500;
     text-decoration: dashed underline;
     text-decoration-color: var(--underline);
-    transition: text-decoration-color var(--transition-default);
   }
 
   @mixin _tooltip-visible {
